Implement file uploading.

--- a/src/main/webapp/static/stream.html
+++ b/src/main/webapp/static/stream.html
@@ -104,7 +104,10 @@
 						<span>Home</span>
 					</div>
 					<div class="col-xs-1"></div>
-					<button class="btn btn-primary col-xs-2 btn-sm text-center active">New</button>
+					<div class="col-xs-2">
+						<a href="newPost.html"><button
+								class="btn btn-primary  btn text-center active">New</button></a>
+					</div>
 					<div class="col-xs-1"></div>
 					<button class="btn btn-warning  col-xs-2 btn-sm">Around</button>
 				</div>
