Implement subscribed posts retrieving

--- a/src/main/webapp/static/newPost.html
+++ b/src/main/webapp/static/newPost.html
@@ -6,6 +6,7 @@
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<!-- <script src="js/jquery-1.11.0.min.js"></script>-->
 <script src="js/bootstrap.min.js"></script>
 <script src="js/newpost.html.js"></script>
 <script src="js/stream.html.js"></script>
@@ -20,9 +21,9 @@
 	<form id="new-post-form" method="post" action="../Posts"
 		enctype="multipart/form-data">
 		<textarea name="description"></textarea>
-		<input type="file" name="New post" /> <input type="submit"
-			name="img_content" id="newPost" value="Submit" /> <input
-			name="author" />
+		<input type="file" name="img_content" /> <input type="submit"
+			id="newPost" value="Submit" /> <input name="author"
+			value="_dummy_user_name" />
 	</form>
 
 	<a href="stream.html"><button
