--- a/src/main/webapp/static/stream.html
+++ b/src/main/webapp/static/stream.html
@@ -3,6 +3,10 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <title></title>
+<!-- <link rel="apple-touch-startup-image" href="icon/start-icon.png">-->
+<!--<link rel="apple-touch-icon" href="icon/start-icon.png">-->
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-capable" content="yes" />
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
