Implement Post retreiving and followship handling

--- a/src/main/webapp/static/login.html
+++ b/src/main/webapp/static/login.html
@@ -10,6 +10,11 @@
 			name="password" /> <input type="submit" value="Login" />
 	</form>
 
+	<form action="../Followship" method="POST">
+		Follower<input type="input" name="follower" /> Followee <input type="input" name="followee" />
+		<input type="submit" value="follow" />
+	</form>
+
 	<a href="register.html">Register</a>
 </body>
 </html>
